--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "bulma": "^0.9.3",
     "concurrently": "^7.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "framer-motion": "^6.3.3",
     "i": "^0.3.7",
@@ -71,5 +70,8 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "server.js",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "dotenv": "^16.0.3"
+  }
 }
